--- a/aaverage/Css_Average.css
+++ b/aaverage/Css_Average.css
@@ -1,9 +1,34 @@
 .AddNode_AG{
     width: 100%;
-    margin: 15px;
+    display: flex;
+    flex-wrap: wrap;
 }
 .main_block_AG{
     width: 80%;
-    margin: 15px;
-    padding: 20px;
+    margin: 12px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+:hover.main_block_AG  {
+    background-color: #f7f7f7;
+    box-shadow: 0 0 10px rgba(0,0,0,0.2);
+}
+.btnAG_process{
+    padding: 5px;
+    margin: 5px;
+    background-color: white;
+    color: rgb(5, 152, 25);
+    border: 1px solid rgb(5, 152, 25);
+    border-radius: 5px;
+    width: 500px;
+}
+.btnAG_Ad_Re{
+    width: 200px;
+    padding: 5px;
+    margin: 5px;
+    background-color: white;
+    color: rgb(5, 152, 25);
+    border: 1px solid rgb(5, 152, 25);
+    border-radius: 5px;
 }
